2008-02-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: CTRL+B as accel for clipboard

2008-02-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/glade/gramps.glade: enlarged dbmanager by 70 pixels
	so that all of the date can show in window. Note: glade-3
	will change this glade file indentation. I edited it by hand.

2008-02-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py (Date.__init__): 
	added Date("Jan 1, 2000") string constructor and
	calendar, quality, and modifier keywords to Date()

2008-02-18 Brian Matherly <brian@gramps-project.org>
	* src/plugins/CmdRef.py:
	0001688: BUG when I clicked generate commandline plugin reference tool

2008-02-18 Brian Matherly <brian@gramps-project.org>
	* src/plugins/BookReport.py:
	* src/ReportBase/_ReportDialog.py:
	0001788: Book report crash

2008-02-18  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/Editors/_EditAddress.py
    * src/Editors/_EditName.py
    * src/Editors/_EditPersonRef.py
    * src/plugins/FindDupers.py
    * src/ReportBase/_StyleEditor.py
    * src/MarkupText.py
    Fix import issues introduce through previous commit.
    #0001791 fixed

2008-02-18  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/* 143 files
    * test/try_tree_model.py
    * windows/nsis/gcheck.py
    imports cleanup

2008-02-18 Frederik De Richter <frederik.de.richter@pandora.be>
    * src/Editors/_EditEvent.py
    link to wiki manual

2008-02-18  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DataViews/EventView.py
	* src/DataViews/FamilyList.py
	* src/DataViews/PedigreeView.py
	* src/DataViews/PersonView.py
	* src/GrampsCfg.py
	* src/Editors/_EditPrimary.py
	* src/DisplayTabs/_EmbeddedList.py
	* src/DisplayTabs/_BackRefList.py
	* src/plugins/RelCalc.py
	* src/QuickReports.py
	* src/Relationship.py
	* src/Selectors/_BaseSelector.py
	* src/GrampsWidgets.py
	* src/DbManager.py
	* src/DisplayState.py
	* src/DisplayModels/_BaseModel.py