@@ -1,3 +1,9 @@
+2008-02-19 Benny Malengier b <benny.malengier@gramps-project.org>
+	* src/Bookmarks.py:
+	* src/gramps_main.py:
+	* src/PageView.py:
+	Don't edit bookmarks, organize them, key: shift+ctrl+b
+
 2008-02-19 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/ViewManager.py: CTRL+B as accel for clipboard
 
